# arxiv-reproducer

./: .gitignore  Makefile  README.md  arxiv-repro.example.toml  pyproject.toml  requirements-lock.txt
.github/workflows/: ci.yml
examples/: README.md
paper/: README.md  main.tex
src/arxiv_reproducer/: __init__.py  agent.py  batch.py  cli.py  config.py  costs.py  figures.py  logs.py  manifest.py  paper.py  prompts.py  retry.py  runs.py  sandbox.py
src/arxiv_reproducer/docker/: sandbox.Dockerfile
tests/: conftest.py  test_agent.py  test_batch.py  test_cli.py  test_config.py  test_costs.py  test_figures.py  test_logs.py  test_manifest.py  test_paper.py  test_retry.py  test_runs.py  test_sandbox.py
