[project]
name = "arxiv-reproducer"
version = "0.1.0"
description = "An AI agent that attempts to reproduce computational results from arXiv papers"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Oscar Tiznado" }]
dependencies = [
    "anthropic>=0.92.0",
    "httpx>=0.27",
    "pypdf>=4.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "ruff>=0.6"]

[project.scripts]
arxiv-repro = "arxiv_reproducer.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/arxiv_reproducer"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
addopts = "--cov=arxiv_reproducer --cov-report=term-missing"
markers = [
    "docker: needs a real Docker daemon (opt-in via --run-docker)",
]

[tool.coverage.run]
branch = true

[tool.coverage.report]
show_missing = true
fail_under = 90
