[project]
name = "arxiv-reproducer"
version = "0.1.0"
description = "An AI agent that attempts to reproduce computational results from arXiv papers"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Oscar Tiznado" }]
dependencies = [
    "anthropic>=0.92.0",
    "httpx>=0.27",
    "pillow>=10.0",
    "pypdf>=4.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "ruff>=0.6", "mypy>=1.10"]

[project.scripts]
arxiv-repro = "arxiv_reproducer.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/arxiv_reproducer"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
addopts = "--cov=arxiv_reproducer --cov-report=term-missing"
markers = [
    "docker: needs a real Docker daemon (opt-in via --run-docker)",
]

[tool.coverage.run]
branch = true

[tool.coverage.report]
show_missing = true
fail_under = 90

[tool.mypy]
python_version = "3.11"
files = ["src"]
check_untyped_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "pypdf.*"
ignore_missing_imports = true
